--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -67,12 +67,12 @@
     "cf[\"project\"]  = \"g_vz_eflow_2pcgnn\"\n",
     "\n",
     "# training configuration\n",
-    "cf[\"num_rnd_round\"]     = 3 # <-----------------------------------------------\n",
+    "cf[\"num_rnd_round\"]     = 1 # <-----------------------------------------------\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 1500 # <-----------------------------------------------\n",
+    "cf[\"num_bin_data\"]      = 32 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 50 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 1 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -256,9 +256,9 @@
     "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
     "    data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "    # classical\n",
-    "    preprocess_mode = \"\"\n",
-    "    for go, gh, gl in product([6,18], [(12,1),(12,2),(12,3),(12,4),(48,1),(48,2),(48,3),(48,4)]):\n",
+    "    # classical ML only\n",
+    "    for p_mode, go, gh, gl in product([\"\", \"normalize\"], [6,18], [12,48], range(4)):\n",
+    "        preprocess_mode = p_mode\n",
     "        gnn_in, gnn_out, gnn_hidden, gnn_layers = 6, go, gh, gl\n",
     "        model = Classical2PCGNN(gnn_in=gnn_in, gnn_out=gnn_out, gnn_hidden=gnn_hidden, gnn_layers=gnn_layers)\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
@@ -270,20 +270,7 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info)\n",
     "\n",
-    "    # classical with normalized data\n",
-    "    preprocess_mode = \"normalize\"\n",
-    "    for go, gh, gl in product([6,18], [(12,1),(12,2),(12,3),(12,4),(48,1),(48,2),(48,3),(48,4)]):\n",
-    "        gnn_in, gnn_out, gnn_hidden, gnn_layers = 6, go, gh, gl\n",
-    "        model = Classical2PCGNN(gnn_in=gnn_in, gnn_out=gnn_out, gnn_hidden=gnn_hidden, gnn_layers=gnn_layers)\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        train_info = {\n",
-    "            \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "            \"gnn_hidden\":gh, \"gnn_layers\":gl, \"gnn_out\":gnn_out, \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "            }\n",
-    "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}_mh0_ml0 | {data_suffix}\"\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)\n",
-    "\n",
+    "    # QML involved\n",
     "    for gnn_measurements in [list(product(range(6), \"Z\")), list(product(range(6), \"XYZ\"))]:\n",
     "        # quantum angle encoding\n",
     "        preprocess_mode = \"normalize\"\n",
