20230820 turn off  TQDMProgessBar

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -30,6 +30,7 @@
     "# pytorch_lightning\n",
     "import lightning as L\n",
     "import lightning.pytorch as pl\n",
+    "from lightning.pytorch.callbacks import TQDMProgressBar\n",
     "\n",
     "# pytorch_geometric\n",
     "import torch_geometric.nn as geom_nn\n",
@@ -69,8 +70,8 @@
     "# training configuration\n",
     "cf[\"num_rnd_round\"]     = 1 # <-----------------------------------------------\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 32 # <-----------------------------------------------\n",
-    "cf[\"batch_size\"]        = 64\n",
+    "cf[\"num_bin_data\"]      = 1 # <-----------------------------------------------\n",
+    "cf[\"batch_size\"]        = 20 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
     "cf[\"max_epochs\"]        = 1 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
@@ -230,6 +231,7 @@
     "        max_epochs        = cf[\"max_epochs\"],\n",
     "        fast_dev_run      = cf[\"fast_dev_run\"],\n",
     "        log_every_n_steps = cf[\"log_every_n_steps\"],\n",
+    "        callbacks         = [TQDMProgressBar(refresh_rate=0)],\n",
     "        )\n",
     "    litmodel = m_lightning.BinaryLitModel(model, graph=True)\n",
     "    trainer.fit(litmodel, datamodule=data_module)\n",
@@ -270,51 +272,51 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info)\n",
     "\n",
-    "    # QML involved\n",
-    "    for gnn_measurements in [list(product(range(6), \"Z\")), list(product(range(6), \"XYZ\"))]:\n",
-    "        # quantum angle encoding\n",
-    "        preprocess_mode = \"normalize\"\n",
-    "        for gl, gr in [(1,2), (0,1)]:\n",
-    "            gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "            model = QuantumAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "            train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "            train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "            train_info.update(data_info)\n",
-    "            train(model, data_module, train_info)\n",
+    "    # # QML involved\n",
+    "    # for gnn_measurements in [list(product(range(6), \"Z\")), list(product(range(6), \"XYZ\"))]:\n",
+    "    #     # quantum angle encoding\n",
+    "    #     preprocess_mode = \"normalize\"\n",
+    "    #     for gl, gr in [(1,2), (0,1)]:\n",
+    "    #         gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
+    "    #         model = QuantumAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
+    "    #         data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    #         train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    #         train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    #         train_info.update(data_info)\n",
+    "    #         train(model, data_module, train_info)\n",
     "\n",
-    "        # quantum angle encoding with elementwise linear\n",
-    "        preprocess_mode = \"normalize\"\n",
-    "        for gl, gr in [(1,2), (0,1)]:\n",
-    "            gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        model = QuantumElementwiseAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)\n",
+    "    #     # quantum angle encoding with elementwise linear\n",
+    "    #     preprocess_mode = \"normalize\"\n",
+    "    #     for gl, gr in [(1,2), (0,1)]:\n",
+    "    #         gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
+    "    #     model = QuantumElementwiseAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
+    "    #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    #     train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    #     train_info.update(data_info)\n",
+    "    #     train(model, data_module, train_info)\n",
     "\n",
-    "        # quantum IQP encoding\n",
-    "        preprocess_mode = \"normalize\"\n",
-    "        for gl, gr in [(1,2), (0,1)]:\n",
-    "            gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        model = QuantumIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)\n",
+    "    #     # quantum IQP encoding\n",
+    "    #     preprocess_mode = \"normalize\"\n",
+    "    #     for gl, gr in [(1,2), (0,1)]:\n",
+    "    #         gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
+    "    #     model = QuantumIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
+    "    #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    #     train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    #     train_info.update(data_info)\n",
+    "    #     train(model, data_module, train_info)\n",
     "\n",
-    "        # quantum IQP encoding with elementwise linear\n",
-    "        preprocess_mode = \"normalize\"\n",
-    "        for gl, gr in [(1,2), (0,1)]:\n",
-    "            gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        model = QuantumElementwiseIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)"
+    "    #     # quantum IQP encoding with elementwise linear\n",
+    "    #     preprocess_mode = \"normalize\"\n",
+    "    #     for gl, gr in [(1,2), (0,1)]:\n",
+    "    #         gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
+    "    #     model = QuantumElementwiseIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
+    "    #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    #     train_info = {\"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    #     train_info.update(data_info)\n",
+    "    #     train(model, data_module, train_info)"
    ]
   }
  ],
