20230823 argparse, sbatch --array, test quantum

--- a/r_export_wandb.ipynb
+++ b/r_export_wandb.ipynb
@@ -2,7 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuantumAngle2PCGNN_normalize_Z_q6_gl0_gr1 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-64_R0.1 | 20230822_082220_0\n",
+      "   epoch   epoch_time\n",
+      "0      0  1705.152832\n",
+      "1      1  1661.729004\n",
+      "2      2  1616.049683\n",
+      "____________________________________________________________________________________________________\n",
+      "QuantumAngle2PCGNN_normalize_Z_q6_gl0_gr1 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-64_R0.1 | 20230822_082211_0\n",
+      "   epoch   epoch_time\n",
+      "0      0  1603.430298\n",
+      "1      1  1627.933838\n",
+      "2      2  1556.182617\n",
+      "____________________________________________________________________________________________________\n",
+      "QuantumAngle2PCGNN_normalize_Z_q6_gl0_gr1 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-256_R0.1 | 20230822_082355_0\n",
+      "   epoch   epoch_time\n",
+      "0      0  6300.504395\n",
+      "1      1  6366.000000\n",
+      "2      2  6260.000488\n",
+      "____________________________________________________________________________________________________\n",
+      "QuantumAngle2PCGNN_normalize_Z_q6_gl0_gr1 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-256_R0.1 | 20230822_082305_0\n",
+      "   epoch   epoch_time\n",
+      "0      0  5998.563477\n",
+      "1      1  6401.809082\n",
+      "2      2  6207.310547\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "api = wandb.Api()\n",
+    "\n",
+    "project = \"ntuyianchen/g_vz_eflow_2pcgnn_slurm\"\n",
+    "\n",
+    "def print_epoch_time(date):\n",
+    "    result = {}\n",
+    "    for run in api.runs(project):\n",
+    "        if date in run.id:\n",
+    "            run = api.run(project+\"/\"+run.id)\n",
+    "            if run.config[\"model_name\"] != \"Classical2PCGNN\":\n",
+    "                print(run.id)\n",
+    "                history = run.history(keys=[\"epoch\", \"epoch_time\"], x_axis=\"epoch\")\n",
+    "                print(history)\n",
+    "                print(\"_\"*100)\n",
+    "\n",
+    "                model_structure = run.id.split()[0]\n",
+    "                average_epoch_time = history[\"epoch_time\"].mean()\n",
+    "                result[model_structure] = average_epoch_time\n",
+    "    return result\n",
+    "\n",
+    "result1 = print_epoch_time(\"20230822_082220\")\n",
+    "result2 = print_epoch_time(\"20230822_082211\")\n",
+    "result3 = print_epoch_time(\"20230822_082355\")\n",
+    "result4 = print_epoch_time(\"20230822_082305\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,37 +154,7 @@
       "1      1  1191.719971\n",
       "____________________________________________________________________________________________________\n"
      ]
-    }
-   ],
-   "source": [
-    "import wandb\n",
-    "api = wandb.Api()\n",
-    "\n",
-    "project = \"ntuyianchen/g_vz_eflow_2pcgnn_slurm\"\n",
-    "\n",
-    "def print_epoch_time(date):\n",
-    "    result = {}\n",
-    "    for run in api.runs(project):\n",
-    "        run = api.run(project+\"/\"+run.id)\n",
-    "        if run.config[\"model_name\"] != \"Classical2PCGNN\" and date in run.id:\n",
-    "            print(run.id)\n",
-    "            history = run.history(keys=[\"epoch\", \"epoch_time\"], x_axis=\"epoch\")\n",
-    "            print(history)\n",
-    "            print(\"_\"*100)\n",
-    "\n",
-    "            model_structure = run.id.split()[0]\n",
-    "            average_epoch_time = history[\"epoch_time\"].mean()\n",
-    "            result[model_structure] = average_epoch_time\n",
-    "    return result\n",
-    "\n",
-    "result = print_epoch_time(\"20230821\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -142,13 +176,13 @@
        " 'QuantumAngle2PCGNN_normalize_Z_q6_gl1_gr2': 1189.1786499023438}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "print_epoch_time(\"20230821\")"
    ]
   }
  ],
