--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# basic packages\n",
-    "import os, time\n",
+    "import os, time, sys\n",
+    "import argparse\n",
     "from itertools import product\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -52,7 +53,15 @@
     "# directory for saving results\n",
     "root_dir = f\"./result\"\n",
     "if os.path.isdir(root_dir) == False:\n",
-    "    os.makedirs(root_dir)"
+    "    os.makedirs(root_dir)\n",
+    "\n",
+    "# argparser\n",
+    "parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
+    "parser.add_argument('--model_class', type=str, help='Quantum gnn model class')\n",
+    "parser.add_argument('--gnn_layers', type=int, help='Quantum gnn layers')\n",
+    "parser.add_argument('--gnn_reupload', type=int, help='Quantum gnn reupload')\n",
+    "parser.add_argument('--rnd_seed', type=int, help='Random seed')\n",
+    "parse_args = parser.parse_args()"
    ]
   },
   {
@@ -68,12 +77,12 @@
     "cf[\"project\"]  = \"g_vz_eflow_2pcgnn_slurm\"\n",
     "\n",
     "# training configuration\n",
-    "cf[\"num_rnd_round\"]     = 1 # <-----------------------------------------------\n",
+    "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 256 # <-----------------------------------------------\n",
+    "cf[\"num_bin_data\"]      = 1500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 3 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 50 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -252,87 +261,49 @@
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
     "\n",
-    "for rnd_seed in range(cf[\"num_rnd_round\"]):\n",
-    "    L.seed_everything(rnd_seed)\n",
-    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
-    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
-    "    data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
+    "L.seed_everything(cf[\"rnd_seed\"])\n",
+    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
+    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
+    "data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "    # # classical ML only\n",
-    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\"], [6,18], [12,48], range(4)):\n",
-    "    #     preprocess_mode = p_mode\n",
-    "    #     gnn_in, gnn_out, gnn_hidden, gnn_layers = 6, go, gh, gl\n",
-    "    #     model = Classical2PCGNN(gnn_in=gnn_in, gnn_out=gnn_out, gnn_hidden=gnn_hidden, gnn_layers=gnn_layers)\n",
-    "    #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "    #     train_info = {\n",
-    "    #         \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "    #         \"gnn_hidden\":gh, \"gnn_layers\":gl, \"gnn_out\":gnn_out, \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "    #         }\n",
-    "    #     train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}_mh0_ml0 | {data_suffix}\"\n",
-    "    #     train_info.update(data_info)\n",
-    "    #     train(model, data_module, train_info)\n",
+    "def train_classical(model_class, preprocess_mode, gnn_in, gnn_out, gnn_hidden, gnn_layers):\n",
+    "    model = model_class(gnn_in=gnn_in, gnn_out=gnn_out, gnn_hidden=gnn_hidden, gnn_layers=gnn_layers)\n",
+    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    train_info = {\n",
+    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
+    "        \"gnn_in\":gnn_in, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_hidden, \"gnn_layers\":gnn_layers, \n",
+    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
+    "        }\n",
+    "    train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}_mh0_ml0 | {data_suffix}\"\n",
+    "    train_info.update(data_info)\n",
+    "    train(model, data_module, train_info)\n",
     "\n",
-    "    # QML involved\n",
-    "    for gnn_measurements_basis in [\"Z\"]:\n",
-    "        # quantum angle encoding\n",
-    "        preprocess_mode = \"normalize\"\n",
-    "        for gl, gr in [(0,1)]:\n",
-    "            gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "            gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
-    "            model = QuantumAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "            train_info = {\n",
-    "                \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "                \"gnn_layer\":gl, \"gnn_reupload\":gr, \"gnn_out\":len(gnn_measurements), \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "                }\n",
-    "            train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "            train_info.update(data_info)\n",
-    "            train(model, data_module, train_info)\n",
+    "def train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis):\n",
+    "    gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
+    "    model = model_class(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
+    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "    train_info = {\n",
+    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
+    "        \"gnn_qubits\":gnn_qubits, \"gnn_layer\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_out\":len(gnn_measurements), \n",
+    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
+    "        }\n",
+    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    train_info.update(data_info)\n",
+    "    train(model, data_module, train_info)\n",
     "\n",
-    "        # # quantum angle encoding with elementwise linear\n",
-    "        # preprocess_mode = \"normalize\"\n",
-    "        # for gl, gr in [(1,2), (0,1)]:\n",
-    "        #     gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        #     gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
-    "        #     model = QuantumElementwiseAngle2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        #     train_info = {\n",
-    "        #         \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        #         \"gnn_layer\":gl, \"gnn_reupload\":gr, \"gnn_out\":len(gnn_measurements), \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        #         }\n",
-    "        #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        #     train_info.update(data_info)\n",
-    "        #     train(model, data_module, train_info)\n",
+    "# # classical ML only\n",
+    "# for p_mode, go, gh, gl in product([\"\", \"normalize\"], [6,18], [12,48], range(4)):\n",
+    "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
+    "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
     "\n",
-    "        # # quantum IQP encoding\n",
-    "        # preprocess_mode = \"normalize\"\n",
-    "        # for gl, gr in [(1,2), (0,1)]:\n",
-    "        #     gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        #     gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
-    "        #     model = QuantumIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        #     train_info = {\n",
-    "        #         \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        #         \"gnn_layer\":gl, \"gnn_reupload\":gr, \"gnn_out\":len(gnn_measurements), \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        #         }\n",
-    "        #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        #     train_info.update(data_info)\n",
-    "        #     train(model, data_module, train_info)\n",
-    "\n",
-    "        # # quantum IQP encoding with elementwise linear\n",
-    "        # preprocess_mode = \"normalize\"\n",
-    "        # for gl, gr in [(1,2), (0,1)]:\n",
-    "        #     gnn_qubits, gnn_layers, gnn_reupload = 6, gl, gr\n",
-    "        #     gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
-    "        #     model = QuantumElementwiseIQP2PCGNN(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "        #     data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        #     train_info = {\n",
-    "        #         \"rnd_seed\":rnd_seed, \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        #         \"gnn_layer\":gl, \"gnn_reupload\":gr, \"gnn_out\":len(gnn_measurements), \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        #         }\n",
-    "        #     train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "        #     train_info.update(data_info)\n",
-    "        #     train(model, data_module, train_info)"
+    "# QML involved\n",
+    "preprocess_mode = \"normalize\"\n",
+    "gnn_qubits      = 6\n",
+    "model_class     = getattr(sys.modules[__name__], parse_args.model_class)\n",
+    "gnn_layers      = parse_args.gnn_layers if parse_args.gnn_layers is not None else 1\n",
+    "gnn_reupload    = parse_args.gnn_reupload if parse_args.gnn_reupload is not None else 0\n",
+    "gnn_measurements_basis = \"Z\"\n",
+    "train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis)"
    ]
   }
  ],
