--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -57,6 +57,7 @@
     "\n",
     "# argparser\n",
     "parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
+    "parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
     "parser.add_argument('--model_class', type=str, help='Quantum gnn model class')\n",
     "parser.add_argument('--gnn_layers', type=int, help='Quantum gnn layers')\n",
     "parser.add_argument('--gnn_reupload', type=int, help='Quantum gnn reupload')\n",
@@ -72,7 +73,8 @@
    "source": [
     "# global settings\n",
     "cf = {}\n",
-    "cf[\"time\"]     = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "# cf[\"time\"]     = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "cf[\"time\"]     = parse_args.date_time\n",
     "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_vz_eflow_2pcgnn_slurm\"\n",
     "\n",
@@ -240,7 +242,7 @@
     "        max_epochs        = cf[\"max_epochs\"],\n",
     "        fast_dev_run      = cf[\"fast_dev_run\"],\n",
     "        log_every_n_steps = cf[\"log_every_n_steps\"],\n",
-    "        callbacks         = [TQDMProgressBar(refresh_rate=0)],\n",
+    "        # callbacks         = [TQDMProgressBar(refresh_rate=0)],\n",
     "        )\n",
     "    litmodel = m_lightning.BinaryLitModel(model, graph=True)\n",
     "    trainer.fit(litmodel, datamodule=data_module)\n",
