20230826 add ckpt path

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -79,12 +79,13 @@
     "cf[\"project\"]  = \"g_vz_eflow_2pcgnn_slurm\"\n",
     "\n",
     "# training configuration\n",
+    "cf[\"lr\"]                = 1E-2\n",
     "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 1500 # <-----------------------------------------------\n",
+    "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 50 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 5 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -244,8 +245,26 @@
     "        log_every_n_steps = cf[\"log_every_n_steps\"],\n",
     "        # callbacks         = [TQDMProgressBar(refresh_rate=0)],\n",
     "        )\n",
-    "    litmodel = m_lightning.BinaryLitModel(model, graph=True)\n",
-    "    trainer.fit(litmodel, datamodule=data_module)\n",
+    "    litmodel = m_lightning.BinaryLitModel(model, lr=cf[\"lr\"], graph=True)\n",
+    "\n",
+    "    # load ckpt file if exists\n",
+    "    try:\n",
+    "        ckpt_dir = f\"result/{cf['project']}/{wandb_info['id']}/checkpoints\"\n",
+    "        for _file in os.listdir(ckpt_dir):\n",
+    "            if _file.endswith(\"ckpt\"):\n",
+    "                ckpt_path = f\"{ckpt_dir}/{_file}\"\n",
+    "    except:\n",
+    "        ckpt_path = None\n",
+    "\n",
+    "    # print information\n",
+    "    print(\"-------------------- Training information --------------------\\n\")\n",
+    "    print(\"model:\", model.__class__.__name__, model, \"\")\n",
+    "    print(\"config:\", cf, \"\")\n",
+    "    print(\"train_info:\", train_info, \"\")\n",
+    "    print(\"wandb_info:\", wandb_info, \"\")\n",
+    "    print(\"--------------------------------------------------------------\\n\")\n",
+    "    \n",
+    "    trainer.fit(litmodel, datamodule=data_module, ckpt_path=ckpt_path)\n",
     "    trainer.test(litmodel, datamodule=data_module)\n",
     "\n",
     "    # finish wandb monitoring\n",
