20230828 rewrite parse and add validation date

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -10,6 +10,7 @@
     "import os, time, sys\n",
     "import argparse\n",
     "from itertools import product\n",
+    "from collections import namedtuple\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# model template\n",
@@ -56,13 +57,26 @@
     "    os.makedirs(root_dir)\n",
     "\n",
     "# argparser\n",
-    "parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
-    "parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
-    "parser.add_argument('--model_class', type=str, help='Quantum gnn model class')\n",
-    "parser.add_argument('--gnn_layers', type=int, help='Quantum gnn layers')\n",
-    "parser.add_argument('--gnn_reupload', type=int, help='Quantum gnn reupload')\n",
-    "parser.add_argument('--rnd_seed', type=int, help='Random seed')\n",
-    "parse_args = parser.parse_args()"
+    "use_parser = False\n",
+    "if use_parser:\n",
+    "    parser = argparse.ArgumentParser(description='Determine the structure of the quantum model.')\n",
+    "    parser.add_argument('--date_time', type=str, help='Date time in format Ymd_HMS')\n",
+    "    parser.add_argument('--model_class', type=str, help='Quantum gnn model class')\n",
+    "    parser.add_argument('--q_gnn_layers', type=int, help='Quantum gnn layers')\n",
+    "    parser.add_argument('--q_gnn_reupload', type=int, help='Quantum gnn reupload')\n",
+    "    parser.add_argument('--rnd_seed', type=int, help='Random seed')\n",
+    "    parse_args = parser.parse_args()\n",
+    "else:\n",
+    "    parse_fields = [\"date_time\", \"model_class\", \"q_gnn_layers\", \"q_gnn_reupload\", \"rnd_seed\"]\n",
+    "    parse_tuple  = namedtuple('parse_tuple', \" \".join(parse_fields))\n",
+    "    parse_args   = parse_tuple(\n",
+    "        date_time      = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime()),\n",
+    "        model_class    = \"QuantumAngle2PCGNN\",\n",
+    "        rnd_seed       = 0,\n",
+    "        q_gnn_layers   = 1,\n",
+    "        q_gnn_reupload = 0,\n",
+    "    )\n",
+    "    "
    ]
   },
   {
@@ -73,9 +87,8 @@
    "source": [
     "# global settings\n",
     "cf = {}\n",
-    "# cf[\"time\"]     = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
     "cf[\"time\"]     = parse_args.date_time\n",
-    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_vz_eflow_2pcgnn_slurm\"\n",
     "\n",
     "# training configuration\n",
@@ -135,6 +148,9 @@
     "\n",
     "    def train_dataloader(self):\n",
     "        return DataLoader(self.train_dataset, batch_size=cf[\"batch_size\"], shuffle=True)\n",
+    "\n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)\n",
     "\n",
     "    def test_dataloader(self):\n",
     "        return DataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)"
@@ -321,8 +337,8 @@
     "preprocess_mode = \"normalize\"\n",
     "gnn_qubits      = 6\n",
     "model_class     = getattr(sys.modules[__name__], parse_args.model_class)\n",
-    "gnn_layers      = parse_args.gnn_layers if parse_args.gnn_layers is not None else 1\n",
-    "gnn_reupload    = parse_args.gnn_reupload if parse_args.gnn_reupload is not None else 0\n",
+    "gnn_layers      = parse_args.q_gnn_layers\n",
+    "gnn_reupload    = parse_args.q_gnn_reupload\n",
     "gnn_measurements_basis = \"Z\"\n",
     "train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis)"
    ]
