add num_sanity_val_steps for disable sanity check

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -254,12 +254,12 @@
     "    # start lightning training\n",
     "    logger  = wandb_logger if cf[\"wandb\"] else None\n",
     "    trainer = L.Trainer(\n",
-    "        logger            = logger, \n",
-    "        accelerator       = cf[\"accelerator\"],\n",
-    "        max_epochs        = cf[\"max_epochs\"],\n",
-    "        fast_dev_run      = cf[\"fast_dev_run\"],\n",
-    "        log_every_n_steps = cf[\"log_every_n_steps\"],\n",
-    "        # callbacks         = [TQDMProgressBar(refresh_rate=0)],\n",
+    "        logger               = logger, \n",
+    "        accelerator          = cf[\"accelerator\"],\n",
+    "        max_epochs           = cf[\"max_epochs\"],\n",
+    "        fast_dev_run         = cf[\"fast_dev_run\"],\n",
+    "        log_every_n_steps    = cf[\"log_every_n_steps\"],\n",
+    "        num_sanity_val_steps = 0,\n",
     "        )\n",
     "    litmodel = m_lightning.BinaryLitModel(model, lr=cf[\"lr\"], graph=True)\n",
     "\n",
@@ -327,6 +327,11 @@
     "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
     "    train_info.update(data_info)\n",
     "    train(model, data_module, train_info)\n",
+    "\n",
+    "# min classical ML only\n",
+    "# for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
+    "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
+    "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
     "\n",
     "# # classical ML only\n",
     "# for p_mode, go, gh, gl in product([\"\", \"normalize\"], [6,18], [12,48], range(4)):\n",
