20230907 First version XZ QFCGNN

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -28,6 +28,7 @@
     "# pytorch\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "from torch.utils.data import DataLoader as TorchDataLoader\n",
     "\n",
     "# pytorch_lightning\n",
     "import lightning as L\n",
@@ -37,7 +38,7 @@
     "# pytorch_geometric\n",
     "import torch_geometric.nn as geom_nn\n",
     "from torch_geometric.data import Data\n",
-    "from torch_geometric.loader import DataLoader\n",
+    "from torch_geometric.loader import DataLoader as GeoDataLoader\n",
     "from torch_geometric.nn import MessagePassing\n",
     "\n",
     "# wandb\n",
@@ -89,7 +90,7 @@
     "cf = {}\n",
     "cf[\"time\"]     = parse_args.date_time\n",
     "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
-    "cf[\"project\"]  = \"g_vz_eflow_2pcgnn_slurm\"\n",
+    "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
     "cf[\"lr\"]                = 1E-2\n",
@@ -98,7 +99,7 @@
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 5 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 20 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -110,19 +111,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class TorchDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __len__(self):\n",
+    "        return len(self.y)\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.x[idx], self.y[idx]\n",
+    "\n",
     "class JetDataModule(pl.LightningDataModule):\n",
-    "    def __init__(self, sig_events, bkg_events, mode=None):\n",
+    "    def __init__(self, sig_events, bkg_events, mode=None, graph=True):\n",
     "        super().__init__()\n",
+    "        # whether transform to torch_geometric graph data\n",
+    "        self.graph = graph\n",
+    "\n",
     "        # jet events\n",
-    "        sig_events = self._preprocess(sig_events, 1, mode)\n",
-    "        bkg_events = self._preprocess(bkg_events, 0, mode)\n",
+    "        self.max_num_ptcs = max(\n",
+    "            max(ak.count(sig_events[\"fast_pt\"], axis=1)),\n",
+    "            max(ak.count(bkg_events[\"fast_pt\"], axis=1)))\n",
+    "        sig_events = self._preprocess(sig_events, mode)\n",
+    "        bkg_events = self._preprocess(bkg_events, mode)\n",
+    "        print(f\"\\nDataLog: Max number of particles = {self.max_num_ptcs}\\n\")\n",
     "\n",
     "        # prepare dataset for dataloader\n",
     "        train_idx = int(cf[\"num_train_ratio\"] * len(sig_events))\n",
-    "        self.train_dataset = sig_events[:train_idx] + bkg_events[:train_idx]\n",
-    "        self.test_dataset  = sig_events[train_idx:] + bkg_events[train_idx:]\n",
+    "        self.train_dataset = self._dataset(sig_events[:train_idx], 1) + self._dataset(bkg_events[:train_idx], 0)\n",
+    "        self.test_dataset  = self._dataset(sig_events[train_idx:], 1) + self._dataset(bkg_events[train_idx:], 0)\n",
     "\n",
-    "    def _preprocess(self, events, y, mode):\n",
+    "    def _preprocess(self, events, mode):\n",
     "        # \"_\" prefix means that it is a fastjet feature\n",
     "        if mode == \"normalize\":\n",
     "            f1 = np.arctan(events[\"fast_pt\"] / events[\"fatjet_pt\"])\n",
@@ -134,26 +151,40 @@
     "            f3 = events[\"fast_delta_phi\"]\n",
     "        arrays = ak.zip([f1, f2, f3])\n",
     "        arrays = arrays.to_list()\n",
-    "        events = [torch.tensor(arrays[i], dtype=torch.float32) for i in range(len(arrays))]\n",
+    "        events = [torch.tensor(arrays[i], dtype=torch.float32, requires_grad=False) for i in range(len(arrays))]\n",
+    "        return events\n",
     "\n",
-    "        # create pytorch_geometric \"Data\" object\n",
-    "        data_list = []\n",
-    "        for i in range(len(events)):\n",
-    "            x = events[i]\n",
-    "            edge_index = list(product(range(len(x)), range(len(x))))\n",
-    "            edge_index = torch.tensor(edge_index).transpose(0, 1)\n",
-    "            x.requires_grad, edge_index.requires_grad = False, False\n",
-    "            data_list.append(Data(x=x, edge_index=edge_index, y=y))\n",
-    "        return data_list\n",
+    "    def _dataset(self, events, y):\n",
+    "        if self.graph == True:\n",
+    "            # create pytorch_geometric \"Data\" object\n",
+    "            dataset = []\n",
+    "            for i in range(len(events)):\n",
+    "                x = events[i]\n",
+    "                edge_index = list(product(range(len(x)), range(len(x))))\n",
+    "                edge_index = torch.tensor(edge_index, requires_grad=False).transpose(0, 1)\n",
+    "                dataset.append(Data(x=x, edge_index=edge_index, y=y))\n",
+    "        else:\n",
+    "            pad     = lambda x: torch.nn.functional.pad(x, (0,0,0,self.max_num_ptcs-len(x)), mode=\"constant\", value=0)\n",
+    "            dataset = TorchDataset(x=[pad(events[i]) for i in range(len(events))], y=[y]*len(events))\n",
+    "        return dataset\n",
     "\n",
     "    def train_dataloader(self):\n",
-    "        return DataLoader(self.train_dataset, batch_size=cf[\"batch_size\"], shuffle=True)\n",
+    "        if self.graph == True:\n",
+    "            return GeoDataLoader(self.train_dataset, batch_size=cf[\"batch_size\"], shuffle=True)\n",
+    "        else:\n",
+    "            return TorchDataLoader(self.train_dataset, batch_size=cf[\"batch_size\"], shuffle=True)\n",
     "\n",
     "    def val_dataloader(self):\n",
-    "        return DataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)\n",
+    "        if self.graph == True:\n",
+    "            return GeoDataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)\n",
+    "        else:\n",
+    "            return TorchDataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)\n",
     "\n",
     "    def test_dataloader(self):\n",
-    "        return DataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)"
+    "        if self.graph == True:\n",
+    "            return GeoDataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)\n",
+    "        else:\n",
+    "            return TorchDataLoader(self.test_dataset, batch_size=cf[\"batch_size\"], shuffle=False)"
    ]
   },
   {
@@ -225,7 +256,19 @@
     "            m_nn.QuantumSphericalIQP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements),\n",
     "            )\n",
     "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
-    "        super().__init__(phi, mlp)"
+    "        super().__init__(phi, mlp)\n",
+    "\n",
+    "class QuantumFCGNN(nn.Module):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload):\n",
+    "        super().__init__()\n",
+    "        self.phi = m_nn.QuantumDisorderedRotFCGraph(num_idx_qubits=gnn_idx_qubits, num_nn_qubits=gnn_nn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload)\n",
+    "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
+    "    def forward(self, x):\n",
+    "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
+    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
+    "        x = self.phi(x)\n",
+    "        x = self.mlp(x)\n",
+    "        return x"
    ]
   },
   {
@@ -234,10 +277,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, data_module, train_info):\n",
+    "def train(model, data_module, train_info, graph=True):\n",
     "    # setup wandb logger\n",
+    "    wandb_info = {}\n",
     "    if cf[\"wandb\"]:\n",
-    "        wandb_info = {}\n",
     "        wandb_info[\"project\"]  = cf[\"project\"]\n",
     "        wandb_info[\"group\"]    = f\"{train_info['sig']}_{train_info['bkg']}\"\n",
     "        wandb_info[\"name\"]     = f\"{train_info['group_rnd']} | {cf['time']}_{train_info['rnd_seed']}\"\n",
@@ -261,7 +304,7 @@
     "        log_every_n_steps    = cf[\"log_every_n_steps\"],\n",
     "        num_sanity_val_steps = 0,\n",
     "        )\n",
-    "    litmodel = m_lightning.BinaryLitModel(model, lr=cf[\"lr\"], graph=True)\n",
+    "    litmodel = m_lightning.BinaryLitModel(model, lr=cf[\"lr\"], graph=graph)\n",
     "\n",
     "    # load ckpt file if exists\n",
     "    try:\n",
@@ -328,7 +371,19 @@
     "    train_info.update(data_info)\n",
     "    train(model, data_module, train_info)\n",
     "\n",
-    "# min classical ML only\n",
+    "def train_qfcgnn(preprocess_mode, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload):\n",
+    "    model = QuantumFCGNN(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload)\n",
+    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
+    "    train_info = {\n",
+    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
+    "        \"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layer\":gnn_layers, \"gnn_reupload\":gnn_reupload, \n",
+    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
+    "        }\n",
+    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{gnn_idx_qubits}_qnn{gnn_nn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    train_info.update(data_info)\n",
+    "    train(model, data_module, train_info, graph=False)\n",
+    "\n",
+    "# # min classical ML only\n",
     "# for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
     "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
     "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
@@ -338,14 +393,24 @@
     "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
     "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
     "\n",
-    "# QML involved\n",
+    "# # QML involved\n",
+    "# preprocess_mode = \"normalize\"\n",
+    "# gnn_qubits      = 6\n",
+    "# model_class     = getattr(sys.modules[__name__], parse_args.model_class)\n",
+    "# gnn_layers      = parse_args.q_gnn_layers\n",
+    "# gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "# gnn_measurements_basis = \"Z\"\n",
+    "# train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis)\n",
+    "\n",
+    "# Quantum Fully Connected Graph\n",
     "preprocess_mode = \"normalize\"\n",
-    "gnn_qubits      = 6\n",
-    "model_class     = getattr(sys.modules[__name__], parse_args.model_class)\n",
-    "gnn_layers      = parse_args.q_gnn_layers\n",
-    "gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "gnn_measurements_basis = \"Z\"\n",
-    "train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis)"
+    "gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "    max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
+    "    max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
+    "gnn_nn_qubits   = 3\n",
+    "gnn_layers      = 2\n",
+    "gnn_reupload    = 0\n",
+    "train_qfcgnn(preprocess_mode, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload)"
    ]
   }
  ],
