--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -96,10 +96,10 @@
     "cf[\"lr\"]                = 1E-2\n",
     "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
-    "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
+    "cf[\"num_bin_data\"]      = 1 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 20 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 1 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -223,19 +223,19 @@
    "outputs": [],
    "source": [
     "class Classical2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_in, gnn_out, gnn_hidden, gnn_layers, mlp_hidden=0, mlp_layers=0):\n",
+    "    def __init__(self, gnn_in, gnn_out, gnn_hidden, gnn_layers, mlp_hidden=0, mlp_layers=0, **kwargs):\n",
     "        phi = m_nn.ClassicalMLP(in_channel=gnn_in, out_channel=gnn_out, hidden_channel=gnn_hidden, num_layers=gnn_layers)\n",
     "        mlp = m_nn.ClassicalMLP(in_channel=gnn_out, out_channel=1, hidden_channel=mlp_hidden, num_layers=mlp_layers)\n",
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumAngle2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements):\n",
+    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
     "        phi = m_nn.QuantumMLP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements)\n",
     "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumElementwiseAngle2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements):\n",
+    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
     "        phi = nn.Sequential(\n",
     "            m_nn.ElementwiseLinear(in_channel=gnn_qubits),\n",
     "            m_nn.QuantumMLP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements),\n",
@@ -244,13 +244,13 @@
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumIQP2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements):\n",
+    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
     "        phi = m_nn.QuantumSphericalIQP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements)\n",
     "        mlp = m_nn.ClassicalMLP(in_channel=len(gnn_measurements), out_channel=1, hidden_channel=0, num_layers=0)\n",
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumElementwiseIQP2PCGNN(Graph2PCGNN):\n",
-    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements):\n",
+    "    def __init__(self, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements, **kwargs):\n",
     "        phi = nn.Sequential(\n",
     "            m_nn.ElementwiseLinear(in_channel=gnn_qubits),\n",
     "            m_nn.QuantumSphericalIQP(num_qubits=gnn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload, measurements=gnn_measurements),\n",
@@ -259,7 +259,7 @@
     "        super().__init__(phi, mlp)\n",
     "\n",
     "class QuantumFCGNN(nn.Module):\n",
-    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, **kwargs):\n",
     "        super().__init__()\n",
     "        self.phi = m_nn.QuantumDisorderedRotFCGraph(num_idx_qubits=gnn_idx_qubits, num_nn_qubits=gnn_nn_qubits, num_layers=gnn_layers, num_reupload=gnn_reupload)\n",
     "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
@@ -346,71 +346,40 @@
     "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
     "data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "def train_classical(model_class, preprocess_mode, gnn_in, gnn_out, gnn_hidden, gnn_layers):\n",
-    "    model = model_class(gnn_in=gnn_in, gnn_out=gnn_out, gnn_hidden=gnn_hidden, gnn_layers=gnn_layers)\n",
+    "def train_classical(preprocess_mode, model_dict):\n",
     "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "    train_info = {\n",
-    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        \"gnn_in\":gnn_in, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_hidden, \"gnn_layers\":gnn_layers, \n",
-    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        }\n",
-    "    train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{gnn_out}_gh{gnn_hidden}_gl{gnn_layers}_mh0_ml0 | {data_suffix}\"\n",
+    "    model       = Classical2PCGNN(**model_dict)\n",
+    "    go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
+    "    mh, ml      = model_dict['mlp_hidden'], model_dict['mlp_layers']\n",
+    "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
+    "    train_info.update(model_dict)\n",
     "    train_info.update(data_info)\n",
     "    train(model, data_module, train_info)\n",
     "\n",
-    "def train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis):\n",
-    "    gnn_measurements = list(product(range(gnn_qubits), gnn_measurements_basis))\n",
-    "    model = model_class(gnn_qubits=gnn_qubits, gnn_layers=gnn_layers, gnn_reupload=gnn_reupload, gnn_measurements=gnn_measurements)\n",
-    "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "    train_info = {\n",
-    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        \"gnn_qubits\":gnn_qubits, \"gnn_layer\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_out\":len(gnn_measurements), \n",
-    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        }\n",
-    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_{gnn_measurements_basis}_q{gnn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
-    "    train_info.update(data_info)\n",
-    "    train(model, data_module, train_info)\n",
-    "\n",
-    "def train_qfcgnn(preprocess_mode, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload):\n",
-    "    model = QuantumFCGNN(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload)\n",
+    "def train_qfcgnn(preprocess_mode, model_dict):\n",
     "    data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "    train_info = {\n",
-    "        \"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode,\n",
-    "        \"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layer\":gnn_layers, \"gnn_reupload\":gnn_reupload, \n",
-    "        \"mlp_hidden\":0, \"mlp_layers\":0,\n",
-    "        }\n",
-    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{gnn_idx_qubits}_qnn{gnn_nn_qubits}_gl{gnn_layers}_gr{gnn_reupload} | {data_suffix}\"\n",
+    "    model       = QuantumFCGNN(**model_dict)\n",
+    "    qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
+    "    gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
+    "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "    train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
+    "    train_info.update(model_dict)\n",
     "    train_info.update(data_info)\n",
     "    train(model, data_module, train_info, graph=False)\n",
     "\n",
-    "# # min classical ML only\n",
-    "# for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
-    "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
-    "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
-    "\n",
     "# # classical ML only\n",
-    "# for p_mode, go, gh, gl in product([\"\", \"normalize\"], [6,18], [12,48], range(4)):\n",
-    "#     train_classical(model_class=Classical2PCGNN, preprocess_mode=p_mode, \n",
-    "#                     gnn_in=6, gnn_out=go, gnn_hidden=gh, gnn_layers=gl)\n",
-    "\n",
-    "# # QML involved\n",
-    "# preprocess_mode = \"normalize\"\n",
-    "# gnn_qubits      = 6\n",
-    "# model_class     = getattr(sys.modules[__name__], parse_args.model_class)\n",
-    "# gnn_layers      = parse_args.q_gnn_layers\n",
-    "# gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "# gnn_measurements_basis = \"Z\"\n",
-    "# train_quantum(model_class, preprocess_mode, gnn_qubits, gnn_layers, gnn_reupload, gnn_measurements_basis)\n",
+    "# for p_mode, go, gh, gl in product([\"normalize\"], [6], [6], [1,2]):\n",
+    "#     model_dict = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "#     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
     "# Quantum Fully Connected Graph\n",
-    "preprocess_mode = \"normalize\"\n",
     "gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
     "    max(ak.count(sig_fatjet_events.events[\"fast_pt\"], axis=1)), \n",
     "    max(ak.count(bkg_fatjet_events.events[\"fast_pt\"], axis=1))))))\n",
-    "gnn_nn_qubits   = 3\n",
-    "gnn_layers      = 2\n",
-    "gnn_reupload    = 0\n",
-    "train_qfcgnn(preprocess_mode, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload)"
+    "preprocess_mode = \"normalize\"\n",
+    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":1, \"gnn_reupload\":0}\n",
+    "train_qfcgnn(preprocess_mode, model_dict)"
    ]
   }
  ],
